kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "POST, GET, OPTIONS"
spec:
  ingressClassName: nginx
  rules:
  - host: short.ly
    http:
      paths:
      # Exact match for POST /shorten (no regex, keep Exact)
      - path: /shorten
        pathType: Exact
        backend:
          service:
            name: web-service
            port:
              number: 80

      # Regex match for GET /<code> (letters+digits)
      # NOTE: regex paths MUST use ImplementationSpecific
      - path: /([A-Za-z0-9]+)
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-service
            port:
              number: 80
